--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
 /*  your css code here. If applicable */
-p:first-line{
+div:before{
+	content:"Before Element";
 	color:rgb(255,0,0);
+	font size:20px;
 }
-p:last-child{
-	color:(255,0,0);
+div:after{
+	content:"After Element";
+	color:rgb(255,0,0);
+	font size:20px;
 }
